дописаны роутеры для ресторанов
