# docs/openapi-schema.yml
@@ -76,33 +76,6 @@ paths:
                 title: Response Get All User Orders Api V1 Users Orders Get
       security:
       - OAuth2PasswordBearer: []
-    post:
-      tags:
-      - Пользователи
-      summary: Сделать заказ из ресторана
-      description: Сделать заказ из ресторана.
-      operationId: new_order_api_v1_users_orders_post
-      requestBody:
-        content:
-          application/json:
-            schema:
-              "$ref": "#/components/schemas/UserCreateOrderPyd"
-        required: true
-      responses:
-        '200':
-          description: Successful Response
-          content:
-            application/json:
-              schema:
-                "$ref": "#/components/schemas/ResponseUserCreateOrderPyd"
-        '422':
-          description: Validation Error
-          content:
-            application/json:
-              schema:
-                "$ref": "#/components/schemas/HTTPValidationError"
-      security:
-      - OAuth2PasswordBearer: []
   "/api/v1/shipping_cost/{restaurant_id}":
     get:
       tags:
@@ -134,6 +107,37 @@ paths:
             application/json:
               schema:
                 "$ref": "#/components/schemas/HTTPValidationError"
+  "/api/v1/users/orders/{restaurant_id}":
+    post:
+      tags:
+      - Пользователи
+      summary: Сделать заказ из ресторана
+      description: Сделать заказ из ресторана.
+      operationId: new_order_api_v1_users_orders__restaurant_id__post
+      security:
+      - OAuth2PasswordBearer: []
+      parameters:
+      - name: restaurant_id
+        in: path
+        required: true
+        schema:
+          type: integer
+          description: ID ресторана
+          title: Restaurant Id
+        description: ID ресторана
+      responses:
+        '200':
+          description: Successful Response
+          content:
+            application/json:
+              schema:
+                "$ref": "#/components/schemas/ResponseUserCreateOrderPyd"
+        '422':
+          description: Validation Error
+          content:
+            application/json:
+              schema:
+                "$ref": "#/components/schemas/HTTPValidationError"
   "/api/v1/users/active_orders":
     get:
       tags:
@@ -159,8 +163,8 @@ paths:
     post:
       tags:
       - Рестораны
-      summary: Создать ресторан
-      description: Создать ресторан.
+      summary: Добавить ресторан
+      description: Добавить ресторан.
       operationId: create_restaurant_api_v1_restaurants_post
       requestBody:
         content:
@@ -222,8 +226,8 @@ paths:
     get:
       tags:
       - Рестораны
-      summary: Подробная информация об выбранном заказе
-      description: Подробная информация об выбранном заказе.
+      summary: Подробная информация об одном выбранном заказе
+      description: Подробная информация о выбранном заказе.
       operationId: get_restaurant_order_api_v1_restaurants__restaurant_id__orders__order_id__get
       security:
       - OAuth2PasswordBearer: []
@@ -437,8 +441,10 @@ components:
           title: Restaurant Id
           description: ID ресторана, из которого сделан заказ
         end_time:
-          type: string
-          format: date-time
+          anyOf:
+          - type: string
+            format: date-time
+          - type: 'null'
           title: End Time
           description: Время завершения доставки
         courier:
@@ -456,7 +462,6 @@ components:
       - status
       - start_time
       - restaurant_id
-      - end_time
       - user
       title: DetailedRestaurantOrderPyd
       description: |-
@@ -467,7 +472,7 @@ components:
             - status: int
             - start_time: datetime
             - restaurant_id: int
-            - end_time: datetime
+            - end_time: Optional[datetime]
             - courier: Optional[ResponseUserPyd]
             - user: DetailedUserInfoPyd
     DetailedUserInfoPyd:
@@ -704,21 +709,6 @@ components:
             - restaurant_id: int
             - courier_id: Optional[int]
             - user_id: int
-    UserCreateOrderPyd:
-      properties:
-        restaurant_id:
-          type: integer
-          title: Restaurant Id
-          description: ID ресторана
-      type: object
-      required:
-      - restaurant_id
-      title: UserCreateOrderPyd
-      description: |-
-        Pydantic модель  для создания заказа.
-
-        Fields:
-            - restaurant_id: int
     ValidationError:
       properties:
         loc:
